--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,12 @@ ENV/
 env.bak/
 venv.bak/
 
+# Local logs and models
+backend/kpi_logs/
+backend/models/
+backend/tb_logs/
+wandb/
+
 # Spyder project settings
 .spyderproject
 .spyproject
